# debian-opennebula

./: .gitignore  Makefile  README.md  actualizar.yml  crear.py  debian.py  docker-compose.yml  env-example  guardar.py  opennebula_lib.py  pyproject.toml
ansible/: .gitignore  master-playbook.yml
terraform/: variables.tf.example
