[project]
name = "debian-opennebula"
version = "0.1.0"
description = ""
authors = [
    { name = "Ion Jaureguialzo Sarasola" }
]
readme = "README.md"
requires-python = "^3.14"
dependencies = [
    "python-dotenv>=1.0.0",
    "pyone (>=7.0.2,<8.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
